--- a/pdns/Dockerfile
+++ b/pdns/Dockerfile
@@ -23,7 +23,7 @@ RUN pip3 install envtpl \
 ENV VERSION=4.1 \
   PDNS_setuid=pdns \
   PDNS_setgid=pdns \
-  PDNS_gardian=yes \
+  PDNS_guardian=yes \
   PDNS_daemon=no \
   PDNS_local_port=53 \
   PDNS_local_address=0.0.0.0 \
