--- a/pdns/Dockerfile
+++ b/pdns/Dockerfile
@@ -26,11 +26,7 @@ RUN pip3 install envtpl \
 ENV VERSION=4.1 \
   PDNS_setuid=pdns \
   PDNS_setgid=pdns \
-  PDNS_guardian=yes \
-  PDNS_daemon=no \
-  PDNS_local_port=53 \
-  PDNS_local_address=0.0.0.0 \
-  PDNS_allow-from=0.0.0.0/0
+  PDNS_guardian=yes
 
 EXPOSE 53 53/udp
 
