--- a/pdns-admin-uwsgi/pdns-admin.ini
+++ b/pdns-admin-uwsgi/pdns-admin.ini
@@ -1,8 +1,8 @@
 [uwsgi]
 plugins = python
 
-uid = uwsgi
-gid = uwsgi
+uid = www-data
+gid = www-data
 
 chdir = /opt/powerdns-admin
 pythonpath = /opt/powerdns-admin
