--- a/pdns-admin-uwsgi/uwsgi.ini
+++ b/pdns-admin-uwsgi/uwsgi.ini
@@ -1,5 +1,9 @@
 [uwsgi]
-plugins = python
+module = app
+callable = app
+
+cheaper = 1
+processes = %(%k + 1)
 
 uid = www-data
 gid = www-data
@@ -7,14 +11,11 @@ gid = www-data
 chdir = /opt/powerdns-admin
 pythonpath = /opt/powerdns-admin
 
-wsgi-file = run.py
-callable = app
 master = true
 
 vacuum = true
 harakiri = 20
 post-buffering = 8192
 socket = 0.0.0.0:8181
-pidfile = /run/uwsgi/%n.pid
 
 enable-threads = true
