--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,7 @@ services:
       - PDNS_master=yes
       - PDNS_api=yes
       - PDNS_api_key=someapikey
-      - PDNS_webserver=yes
-      - PDNS_webserver_address=0.0.0.0
+      - PDNS_api_readonly=no
       - PDNS_webserver_password=somewebpassword
       - PDNS_version_string=anonymous
       - PDNS_default_ttl=3600
@@ -51,4 +50,4 @@ services:
     links:
       - pdns-admin-uwsgi
     ports:
-      - 8080:80
+      - 8880:80
