--- a/pdns-admin-uwsgi/Dockerfile
+++ b/pdns-admin-uwsgi/Dockerfile
@@ -26,7 +26,9 @@ ENV PDNS_ADMIN_LOGIN_TITLE="PDNS" \
   PDNS_ADMIN_LOG_LEVEL="INFO" \
   PDNS_ADMIN_BASIC_ENABLED=True \
   PDNS_ADMIN_SIGNUP_ENABLED=True \
-  PDNS_ADMIN_RECORDS_ALLOW_EDIT="['SOA', 'NS', 'A', 'AAAA', 'CNAME', 'MX', 'TXT', 'SRV']"
+  PDNS_ADMIN_RECORDS_ALLOW_EDIT="['SOA', 'NS', 'A', 'AAAA', 'CNAME', 'MX', 'TXT', 'SRV']" \
+  PDNS_ADMIN_FORWARD_RECORDS_ALLOW_EDIT="['A', 'AAAA', 'CAA', 'CNAME', 'MX', 'PTR', 'SPF', 'SRV', 'TXT', 'LOC' 'NS']" \
+  PDNS_ADMIN_REVERSE_RECORDS_ALLOW_EDIT="['SOA', 'TXT', 'LOC', 'NS', 'PTR']"
 
 EXPOSE 8181
 
