--- a/pdns-admin/Dockerfile
+++ b/pdns-admin/Dockerfile
@@ -57,4 +57,6 @@ COPY pdns-nginx.conf /etc/nginx/conf.d/default.conf
 COPY config.py.jinja2 /
 COPY docker-cmd.sh /
 
+HEALTHCHECK CMD curl --fail http://localhost:8181 || exit 1
+
 CMD [ "bash", "/docker-cmd.sh" ]
