Woops, do not remove Curl For Healthcheck to work

--- a/pdns-admin/Dockerfile
+++ b/pdns-admin/Dockerfile
@@ -30,8 +30,7 @@ RUN curl -sSL https://github.com/ngoduykhanh/PowerDNS-Admin/archive/master.tar.g
   && chown -R root: /opt/powerdns-admin \
   && chown -R www-data: /opt/powerdns-admin/upload \
   && pip install -r requirements.txt \
-  && pip install envtpl uwsgi ldap psycopg2 \
-  && apt-get purge -y --auto-remove curl
+  && pip install envtpl uwsgi ldap psycopg2
 
 ENV PDNS_ADMIN_LOGIN_TITLE="PDNS" \
   PDNS_ADMIN_TIMEOUT=10 \
