--- a/pdns-admin/Dockerfile
+++ b/pdns-admin/Dockerfile
@@ -8,8 +8,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   curl \
   gnupg \
   apt-transport-https \
-  && curl https://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | apt-key add - \
-  && curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
+  && curl -sSL https://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | apt-key add - \
+  && curl -sSL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
   && ln /etc/apt/sources.list.d.available/* /etc/apt/sources.list.d/ \
   && apt-get update && apt-get install -y --no-install-recommends \
   postgresql-client \
