--- a/pdns-admin/pdns-nginx.conf
+++ b/pdns-admin/pdns-nginx.conf
@@ -11,7 +11,7 @@ server {
 
     location @pdns_admin {
         include uwsgi_params;
-        uwsgi_pass /tmp/uwsgi.sock;
+        uwsgi_pass unix:///tmp/uwsgi.sock;
     }
 
     # redirect server error pages to the static page /50x.html
