--- a/pdns-admin/supervisord.conf
+++ b/pdns-admin/supervisord.conf
@@ -16,4 +16,9 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
+[program:nginx]
+command=/usr/sbin/nginx -g "daemon off;"
+stdout_events_enabled=true
+stderr_events_enabled=true
+
 [supervisorctl]
