--- a/pdns-admin/supervisord.conf
+++ b/pdns-admin/supervisord.conf
@@ -20,5 +20,9 @@ stderr_logfile_maxbytes=0
 command=/usr/sbin/nginx -g "daemon off;"
 stdout_events_enabled=true
 stderr_events_enabled=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
 [supervisorctl]
