Fixes for changes in upstream

--- a/pdns-admin/Dockerfile
+++ b/pdns-admin/Dockerfile
@@ -42,7 +42,9 @@ ENV PDNS_ADMIN_LOGIN_TITLE="PDNS" \
   PDNS_ADMIN_SIGNUP_ENABLED=True \
   PDNS_ADMIN_RECORDS_ALLOW_EDIT="['A', 'AAAA', 'CNAME', 'MX', 'TXT', 'SRV', 'NS', 'SOA']" \
   PDNS_ADMIN_FORWARD_RECORDS_ALLOW_EDIT="['A', 'AAAA', 'CAA', 'CNAME', 'MX', 'PTR', 'SPF', 'SRV', 'TXT', 'LOC' 'NS']" \
-  PDNS_ADMIN_REVERSE_RECORDS_ALLOW_EDIT="['TXT', 'LOC', 'NS', 'PTR', 'SOA']"
+  PDNS_ADMIN_REVERSE_RECORDS_ALLOW_EDIT="['TXT', 'LOC', 'NS', 'PTR', 'SOA']" \
+  PDNS_ADMIN_DNSSEC_ADMINS_ONLY=False \
+  PDNS_ADMIN_BG_DOMAIN_UPDATES=False
 
 ENV LC_ALL en_US.UTF-8
 ENV LANG en_US.UTF-8
