Change default PDNS_ADMIN_RECORDS_ALLOW_EDIT

--- a/pdns-admin/Dockerfile
+++ b/pdns-admin/Dockerfile
@@ -40,9 +40,7 @@ ENV PDNS_ADMIN_LOGIN_TITLE="PDNS" \
   PDNS_ADMIN_LOG_LEVEL="INFO" \
   PDNS_ADMIN_BASIC_ENABLED=True \
   PDNS_ADMIN_SIGNUP_ENABLED=True \
-  PDNS_ADMIN_RECORDS_ALLOW_EDIT="['A', 'AAAA', 'CNAME', 'MX', 'TXT', 'SRV', 'NS', 'SOA']" \
-  PDNS_ADMIN_FORWARD_RECORDS_ALLOW_EDIT="['A', 'AAAA', 'CAA', 'CNAME', 'MX', 'PTR', 'SPF', 'SRV', 'TXT', 'LOC' 'NS']" \
-  PDNS_ADMIN_REVERSE_RECORDS_ALLOW_EDIT="['TXT', 'LOC', 'NS', 'PTR', 'SOA']" \
+  PDNS_ADMIN_RECORDS_ALLOW_EDIT="['A', 'AAAA', 'CAA', 'CNAME', 'MX', 'PTR', 'SPF', 'SRV', 'TXT', 'LOC', 'DS', 'NS', 'SOA', 'PTR']" \
   PDNS_ADMIN_DNSSEC_ADMINS_ONLY=False \
   PDNS_ADMIN_BG_DOMAIN_UPDATES=False
 
