--- a/pdns-recursor/Dockerfile
+++ b/pdns-recursor/Dockerfile
@@ -22,7 +22,7 @@ ENV VERSION=4.1 \
   PDNS_daemon=no \
   PDNS_local_port=53 \
   PDNS_local_address=0.0.0.0 \
-  PDNS_allow-from=0.0.0.0/0 \
+  PDNS_allow_from=0.0.0.0/0 \
   PDNS_webserver=yes \
   PDNS_webserver_address=0.0.0.0 \
   PDNS_api_readonly=yes
