--- a/pdns-admin/Dockerfile
+++ b/pdns-admin/Dockerfile
@@ -41,6 +41,7 @@ ENV PDNS_ADMIN_LOGIN_TITLE="PDNS" \
   PDNS_ADMIN_BASIC_ENABLED=True \
   PDNS_ADMIN_SIGNUP_ENABLED=True \
   PDNS_ADMIN_RECORDS_ALLOW_EDIT="['A', 'AAAA', 'CAA', 'CNAME', 'MX', 'PTR', 'SPF', 'SRV', 'TXT', 'LOC', 'DS', 'NS', 'SOA', 'PTR']" \
+  PDNS_ADMIN_REVERSE_RECORDS_ALLOW_EDIT="['PTR', 'TXT', 'LOC', 'NS', 'SOA']" \
   PDNS_ADMIN_DNSSEC_ADMINS_ONLY=False \
   PDNS_ADMIN_BG_DOMAIN_UPDATES=False
 
