--- a/pdns-admin/Dockerfile
+++ b/pdns-admin/Dockerfile
@@ -60,6 +60,6 @@ COPY pdns-nginx.conf /etc/nginx/conf.d/default.conf
 COPY config.py.jinja2 /
 COPY docker-cmd.sh /
 
-HEALTHCHECK --interval=30s --timeout=3s --start-period=120s CMD curl --fail http://localhost:8181 || exit 1
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5m CMD curl --fail http://localhost:8181 || exit 1
 
 CMD [ "bash", "/docker-cmd.sh" ]
