Update harakiri settings

--- a/pdns-admin/uwsgi.ini
+++ b/pdns-admin/uwsgi.ini
@@ -14,7 +14,9 @@ pythonpath = /opt/powerdns-admin
 master = true
 
 vacuum = true
-harakiri = 20
+harakiri = 120
+harakiri-verbose = true
+harakiri-no-arh = true
 post-buffering = 8192
 socket = /tmp/uwsgi.sock
 
