--- a/pdns/Dockerfile
+++ b/pdns/Dockerfile
@@ -1,20 +1,18 @@
-FROM python:stretch
-LABEL maintainer="JSenecal@connectitnet.com"
+FROM python:3-stretch
+LABEL maintainer="Jonathan Senecal <JSenecal@jonathansenecal.com>"
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-  curl \
-  gnupg
+ENV DEBIAN_FRONTEND=noninteractive
 
 COPY src/ /
 
-ENV DEBIAN_FRONTEND=noninteractive
-RUN curl https://repo.powerdns.com/FD380FBB-pub.asc | apt-key add - \
-  && curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - \
+RUN apt-get update && apt-get install -y --no-install-recommends curl gnupg apt-transport-https \
+  && apt-key adv --no-tty --fetch-keys https://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc \
+  && apt-key adv --no-tty --fetch-keys https://repo.powerdns.com/FD380FBB-pub.asc \
+  && ln /etc/apt/sources.list.d.available/* /etc/apt/sources.list.d/ \
   && apt-get update && apt-get install -y --no-install-recommends \
   pdns-server \
   pdns-backend-mysql \
   pdns-backend-pgsql \
-  pdns-backend-sqlite3 \
   pdns-tools \
   postgresql-client \
   mysql-client \
@@ -36,6 +34,7 @@ ENV VERSION=4.1 \
 EXPOSE 53 53/udp 8081
 
 COPY pdns.conf.jinja2 /etc/powerdns/
-COPY docker-cmd.sh /
+COPY docker-entrypoint.sh /
 
-CMD [ "bash", "/docker-cmd.sh" ]
+ENTRYPOINT [ "/docker-entrypoint.sh" ]
+CMD [ "/usr/sbin/pdns_server" ]
