--- a/pdns-admin/Dockerfile
+++ b/pdns-admin/Dockerfile
@@ -1,16 +1,14 @@
 FROM python:3-stretch
 LABEL maintainer="Jonathan Senecal <JSenecal@jonathansenecal.com>"
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 COPY src/ /
 
-ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install -y --no-install-recommends \
-  curl \
-  gnupg \
-  apt-transport-https \
-  && curl -sSL https://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | apt-key add - \
-  && curl -sSL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
-  && curl -sSL https://deb.nodesource.com/setup_9.x | bash - \
+RUN apt-get update && apt-get install -y --no-install-recommends curl gnupg apt-transport-https \
+  && apt-key adv --no-tty --fetch-keys https://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc \
+  && apt-key adv --no-tty --fetch-keys https://dl.yarnpkg.com/debian/pubkey.gpg \
+  && curl -sSL https://deb.nodesource.com/setup_10.x | bash - \
   && ln /etc/apt/sources.list.d.available/* /etc/apt/sources.list.d/ \
   && apt-get update && apt-get install -y --no-install-recommends \
   postgresql-client \
@@ -20,22 +18,26 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   libsasl2-dev libldap2-dev libssl-dev \
   libxml2-dev libxslt1-dev libxmlsec1-dev libffi-dev pkg-config \
   locales locales-all \
-  nodejs yarn nginx \
+  nodejs yarn \
   && rm -rf /var/lib/apt/lists/* \
   && mkdir -p /opt/powerdns-admin \
-  && apt-get purge -y --auto-remove gnupg
+  && apt-get purge -y --auto-remove gnupg apt-transport-https
 
 WORKDIR /opt/powerdns-admin
+
+VOLUME [ "/opt/powerdns-admin/app/static", "/opt/powerdns-admin/app/upload" ]
+
 
 RUN curl -sSL https://github.com/ngoduykhanh/PowerDNS-Admin/archive/master.tar.gz | tar -xzC /opt/powerdns-admin --strip 1 \
   && chown -R root: /opt/powerdns-admin \
   && chown -R www-data: /opt/powerdns-admin/upload \
-  && pip install -r requirements.txt \
-  && pip install envtpl uwsgi psycopg2
+  && pip install --upgrade pip envtpl uwsgi psycopg2 \
+  && pip install -r requirements.txt
 
 RUN yarn install --pure-lockfile
 
-ENV PDNS_ADMIN_LOGIN_TITLE="PDNS" \
+ENV DBBACKEND='mysql' \
+  PDNS_ADMIN_LOGIN_TITLE="PDNS" \
   PDNS_ADMIN_TIMEOUT=10 \
   PDNS_ADMIN_LOG_LEVEL="INFO" \
   PDNS_ADMIN_BASIC_ENABLED=True \
@@ -49,17 +51,14 @@ ENV LC_ALL en_US.UTF-8
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US.UTF-8 
 
-EXPOSE 8181
+EXPOSE 8080
 
-VOLUME [ "/opt/powerdns-admin/upload" ]
-VOLUME [ "/opt/powerdns-admin/migrations" ]
-
-COPY uwsgi.ini /etc/uwsgi/
 COPY supervisord.conf /etc/supervisord.conf
-COPY pdns-nginx.conf /etc/nginx/conf.d/default.conf
+
 COPY config.py.jinja2 /
-COPY docker-cmd.sh /
+COPY docker-entrypoint.sh /
 
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5m CMD curl --fail http://localhost:8181 || exit 1
 
-CMD [ "bash", "/docker-cmd.sh" ]
+ENTRYPOINT [ "bash", "/docker-entrypoint.sh" ]
+CMD [ "supervisord", "-c", "/etc/supervisord.conf" ]
