--- a/pdns-admin/supervisord.conf
+++ b/pdns-admin/supervisord.conf
@@ -8,18 +8,12 @@ nodaemon=true   	           ; (start in foreground if true;default false)
 minfds=1024                  ; (min. avail startup file descriptors;default 1024)
 minprocs=200                 ; (min. avail process descriptors;default 200)
 
-
-[program:uwsgi]
-command=/usr/local/bin/uwsgi --ini /etc/uwsgi/uwsgi.ini --die-on-term
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-
-[program:nginx]
-command=/usr/sbin/nginx -g "daemon off;"
-stdout_events_enabled=true
-stderr_events_enabled=true
+[program:gunicorn]
+command=/usr/local/bin/gunicorn -t 120 --workers 4 --bind '0.0.0.0:8080' --log-level info app:app
+directory=/opt/powerdns-admin
+autostart=true
+priority=999
+user=www-data
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
