--- a/pdnsadmin-nginx.conf
+++ b/pdnsadmin-nginx.conf
@@ -35,6 +35,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme;
             add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"';
+            proxy_connect_timeout 600s;
+            proxy_read_timeout 600s;
         }
     }
 }
